[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
license = "Unlicense"
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3.24"
log = "0.4.17"

# Parity
codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
jsonrpsee = { version = "0.15", features = ["server", "macros"] }

# Substrate
sc-basic-authorship = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-cli = { git = "https://github.com/humanode-network/substrate", branch = "time-warp", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "time-warp", optional = true }
sc-consensus-manual-seal = { git = "https://github.com/humanode-network/substrate", branch = "time-warp", optional = true }
sc-executor = { git = "https://github.com/humanode-network/substrate", branch = "time-warp", features = ["wasmtime"] }
sc-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-keystore = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-network = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-rpc-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "time-warp", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-inherents = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-keyring = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
sp-timestamp = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
substrate-frame-rpc-system = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
frame-benchmarking-cli = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
frame-system = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }
pallet-transaction-payment = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }

# Frontier
fc-cli = { path = "../../client/cli" }
fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
fc-rpc = { path = "../../client/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fp-consensus = { path = "../../primitives/consensus" }
fp-dynamic-fee = { path = "../../primitives/dynamic-fee" }
fp-evm = { path = "../../primitives/evm" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/humanode-network/substrate", branch = "time-warp" }

[features]
default = ["aura", "with-rocksdb-weights"]
aura = [
	"sc-consensus-aura",
	"frontier-template-runtime/aura",
]
manual-seal = [
	"sc-consensus-manual-seal",
	"frontier-template-runtime/manual-seal",
]
with-rocksdb-weights = ["frontier-template-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["frontier-template-runtime/with-paritydb-weights"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
 	"frame-benchmarking-cli/runtime-benchmarks",
]
